--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/system": "^6.1.1",
+    "lucide-react": "^0.446.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
