--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@mui/system": "^6.1.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.446.0",
     "next": "14.2.5",
     "react": "^18",
