--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.446.0",
     "next": "14.2.5",
+    "prism-react-renderer": "^2.4.1",
     "react": "^18",
     "react-dom": "^18"
   },
